@startuml

entity User {
* userId : uuid
--
login : varchar(255)
birthDate : date
photo : varchar(255)
}

entity UserCredentials {
* userCredentialsId : uuid
--
* userId : uuid <<FK>>
email : varchar(255)
emailVerified : bool
passwordHash : varchar(255)
}

entity Stats {
* statsId : uuid
--
* userId : uuid <<FK>>
}

entity Stat {
* statId : uuid
--
* statsId : uuid <<FK>>
name : varchar(255)
value : varchar(255)
lastUpdate : date
}




entity Workout {
* workoutId : uuid
--
* userId : uuid <<FK>>
name : varchar(255)
duration : time
startDate : date
}


entity ExerciseLibrary {
* exerciseLibraryId : uuid
--
* user_id : uuid <<FK>>
}

entity ExerciseTemplate {
* exerciseTemplateId : uuid
--
* exerciseLibraryId : uuid <<FK>>
name : varchar(255)
techniqueDescription : varchar(255)
}

entity WorkoutExercise {
* workoutExerciseId : uuid
--
* workoutId : uuid <<FK>>
* exerciseTemplateId : uuid <<FK>>
}

entity Set {
* setId : uuid
--
* workoutExerciseId : uuid <<FK>>
setNumber : int
rpe : decimal(2,1)
notes : varchar
reps : smallint
value_numeric : float
value_time : interval
}

entity MuscleGroup {
* muscleGroupId : uuid
--
* exerciseTemplateId : uuid <<FK>>
name : varchar(255)
}


User ||--|| UserCredentials : has
User ||--o{ Workout : owns

Stats ||--|| User : has
Stats ||--o{ Stat : contains

Workout ||--o{ WorkoutExercise : includes
WorkoutExercise ||--o{ Set : includes

ExerciseLibrary ||--o{ ExerciseTemplate : defines
ExerciseTemplate ||--o{ WorkoutExercise : uses
ExerciseTemplate ||--|| MuscleGroup : has



@enduml